web-infras/parser/tests/fixtures/babel/es2015/uncategorised/365/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,10)
1|function await() {}
 |        ^
